kitten/reported_bugs/rust/rust-83253-5/stderr.txt
error[E0308]: mismatched types

 --> mutant.rs:4:50

  |

4 | struct Foo < const NUM_BYTES : u8 > ( pub [ u8 ; NUM_BYTES ] ) ;

  |                                                  ^^^^^^^^^ expected `usize`, found `u8`



thread 'rustc' panicked at 'assertion failed: `(left == right)`

  left: `usize`,

 right: `u8`: cannot relate constants of different types', /rustc/36f1f04f18b89ba4a999bcfd6584663fd6fc1c5d/compiler/rustc_middle/src/ty/relate.rs:502:5

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.52.0-nightly (36f1f04f1 2021-03-17) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [typeck] type-checking `main`

#1 [typeck_item_bodies] type-checking all item bodies

end of query stack

error: aborting due to previous error



For more information about this error, try `rustc --explain E0308`.

